--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
   "Язык": "English",
   "Главная": "Main page",
-  "О сайте": "About"
+  "О сайте": "About",
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Unexpected error has occurred",
+  "Обновить страницу": "Reload page"
 }
