update sidebar, add button themes and sizes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "О сайте": "About",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Unexpected error has occurred",
-  "Обновить страницу": "Reload page"
+  "Обновить страницу": "Reload page",
+  "Которкий язык": "EN"
 }
